- patches.fixes/nfs-state-fix: NFS: don't try to use lock state   when we hold a delegation (bnc#831029) - add to series.conf

--- a/series.conf
+++ b/series.conf
@@ -1153,6 +1153,7 @@
 	patches.fixes/sunrpc-increase-max-slot-table.patch
 	patches.fixes/xprtrdma-transport-should-not-bug-check-when-a-dup-reply-is-received
 	patches.fixes/SUNRPC-Prevent-an-rpc_task-wakeup-race.patch
+	patches.fixes/nfs-state-fix
 
 	########################################################
 	# lockd
