--- a/series.conf
+++ b/series.conf
@@ -12476,6 +12476,9 @@
 	patches.fixes/net-sctp-fix-remote-memory-pressure-from-excessive-q.patch
 	patches.fixes/netlink-add-privilege-check-of-socket-opener.patch
 
+	# bsc#912171
+	patches.fixes/qlge-0001-qlge-fix-an-vs-bug.patch
+
 	########################################################
 	# Wireless Networking
 	########################################################
