sweep the floors and convert some .get_drvinfo routines to strlcpy (bsc#909566 FATE#314306).

--- a/series.conf
+++ b/series.conf
@@ -14315,6 +14315,7 @@
 	patches.drivers/sky2-0013-sky2-fix-skb-truesize-underestimation.patch
 	patches.drivers/sky2-0014-net-add-skb-frag-size-accessors.patch
 	patches.drivers/sky2-0015-sky2-fix-regression-on-Yukon-Optima.patch
+	patches.drivers/sky2-0016-sweep-the-floors-and-convert-some-.get_drvinfo-routi.patch
 	
 	########################################################
 	# Wireless Networking
