--- a/series.conf
+++ b/series.conf
@@ -14327,6 +14327,7 @@
 	patches.drivers/sky2-0025-Sweep-away-N-A-fw_version-dustbunnies-from-the-.get_.patch
 	patches.drivers/sky2-0026-sky2-add-bql-support.patch
 	patches.drivers/sky2-0027-drivers-net-Remove-alloc_etherdev-error-messages.patch
+	patches.drivers/sky2-0028-sky2-dont-overwrite-settings-for-PHY-Quick-link.patch
 	
 	########################################################
 	# Wireless Networking
