--- a/series.conf
+++ b/series.conf
@@ -14312,6 +14312,7 @@
 	patches.drivers/sky2-0010-sky2-manage-irq-better-on-single-port-card.patch
 	patches.drivers/sky2-0011-net-use-DMA_x_DEVICE-and-dma_mapping_error-with-skb_.patch
 	patches.drivers/sky2-0012-net-Remove-unnecessary-driver-assignments-of-ethtool.patch
+	patches.drivers/sky2-0013-sky2-fix-skb-truesize-underestimation.patch
 	
 	########################################################
 	# Wireless Networking
