--- a/series.conf
+++ b/series.conf
@@ -14322,6 +14322,7 @@
 	patches.drivers/sky2-0020-sky2-reduce-default-Tx-ring-size.patch
 	patches.drivers/sky2-0021-sky2-used-fixed-RSS-key.patch
 	patches.drivers/sky2-0022-sky2-version-1.30.patch
+	patches.drivers/sky2-0023-sky2-enforce-minimum-ring-size.patch
 	
 	########################################################
 	# Wireless Networking
