sky2: used fixed RSS key (bsc#909566 FATE#314306).

--- a/series.conf
+++ b/series.conf
@@ -14320,6 +14320,7 @@
 	patches.drivers/sky2-0018-sky2-pci-posting-issues.patch
 	patches.drivers/sky2-0019-sky2-rename-up-down-functions.patch
 	patches.drivers/sky2-0020-sky2-reduce-default-Tx-ring-size.patch
+	patches.drivers/sky2-0021-sky2-used-fixed-RSS-key.patch
 	
 	########################################################
 	# Wireless Networking
