Sweep away N/A fw_version dustbunnies from the .get_drvinfo routine of a number of drivers (bsc#909566 FATE#314306).

--- a/series.conf
+++ b/series.conf
@@ -14324,6 +14324,7 @@
 	patches.drivers/sky2-0022-sky2-version-1.30.patch
 	patches.drivers/sky2-0023-sky2-enforce-minimum-ring-size.patch
 	patches.drivers/sky2-0024-sky2-fix-hang-in-napi_disable.patch
+	patches.drivers/sky2-0025-Sweep-away-N-A-fw_version-dustbunnies-from-the-.get_.patch
 	
 	########################################################
 	# Wireless Networking
