sky2: fix cleanup sequence in probe() function (bsc#909566 FATE#314306).

--- a/series.conf
+++ b/series.conf
@@ -14332,6 +14332,7 @@
 	patches.drivers/sky2-0030-sky2-copy-received-packets-on-inefficient-unaligned-.patch
 	patches.drivers/sky2-0031-sky2-Added-support-for-Optima-EEE.patch
 	patches.drivers/sky2-0032-drivers-net-ethernet-marvell-sky2.c-fix-error-return.patch
+	patches.drivers/sky2-0033-sky2-fix-cleanup-sequence-in-probe-function.patch
 	
 	########################################################
 	# Wireless Networking
