net: Replace u64_stats_fetch_begin_bh to u64_stats_fetch_begin_irq (bsc#909566 FATE#314306).

--- a/series.conf
+++ b/series.conf
@@ -14342,6 +14342,7 @@
 	patches.drivers/sky2-0040-net-sky2-calls-skb_set_hash.patch
 	patches.drivers/sky2-0041-sky2-initialize-napi-before-registering-device.patch
 	patches.drivers/sky2-0042-sky2-allow-mac-to-come-from-dt.patch
+	patches.drivers/sky2-0043-net-Replace-u64_stats_fetch_begin_bh-to-u64_stats_fe.patch
 	
 	########################################################
 	# Wireless Networking
