sky2: fix hang in napi_disable (bsc#909566 FATE#314306).

--- a/series.conf
+++ b/series.conf
@@ -14323,6 +14323,7 @@
 	patches.drivers/sky2-0021-sky2-used-fixed-RSS-key.patch
 	patches.drivers/sky2-0022-sky2-version-1.30.patch
 	patches.drivers/sky2-0023-sky2-enforce-minimum-ring-size.patch
+	patches.drivers/sky2-0024-sky2-fix-hang-in-napi_disable.patch
 	
 	########################################################
 	# Wireless Networking
