--- a/series.conf
+++ b/series.conf
@@ -14344,6 +14344,7 @@
 	patches.drivers/sky2-0042-sky2-allow-mac-to-come-from-dt.patch
 	patches.drivers/sky2-0043-net-Replace-u64_stats_fetch_begin_bh-to-u64_stats_fe.patch
 	patches.drivers/sky2-0044-sky2-Don-t-receive-packets-when-the-napi-budget-0.patch
+	patches.drivers/sky2-0045-sky2-Call-dev_kfree_skb_any-instead-of-dev_kfree_skb.patch
 	
 	########################################################
 	# Wireless Networking
