net: Remove unnecessary driver assignments of ethtool_ringparam fields to zero (bsc#909566 FATE#314306).

--- a/series.conf
+++ b/series.conf
@@ -14311,6 +14311,7 @@
 	patches.drivers/sky2-0009-sky2-convert-to-SKB-paged-frag-API.patch
 	patches.drivers/sky2-0010-sky2-manage-irq-better-on-single-port-card.patch
 	patches.drivers/sky2-0011-net-use-DMA_x_DEVICE-and-dma_mapping_error-with-skb_.patch
+	patches.drivers/sky2-0012-net-Remove-unnecessary-driver-assignments-of-ethtool.patch
 	
 	########################################################
 	# Wireless Networking
