--- a/series.conf
+++ b/series.conf
@@ -14338,6 +14338,7 @@
 	patches.drivers/sky2-0036-remove-init-of-dev-perm_addr-in-drivers.patch
 	patches.drivers/sky2-0037-ethernet-Remove-unnecessary-alloc-OOM-messages-alloc.patch
 	patches.drivers/sky2-0038-net-sky2-remove-unnecessary-pci_set_drvdata.patch
+	patches.drivers/sky2-0039-net-Explicitly-initialize-u64_stats_sync-structures-.patch
 	
 	########################################################
 	# Wireless Networking
