net: sky2: remove unnecessary pci_set_drvdata() (bsc#909566 FATE#314306).

--- a/series.conf
+++ b/series.conf
@@ -14337,6 +14337,7 @@
 	patches.drivers/sky2-0035-drivers-net-fix-up-function-prototypes-after-__dev-r.patch
 	patches.drivers/sky2-0036-remove-init-of-dev-perm_addr-in-drivers.patch
 	patches.drivers/sky2-0037-ethernet-Remove-unnecessary-alloc-OOM-messages-alloc.patch
+	patches.drivers/sky2-0038-net-sky2-remove-unnecessary-pci_set_drvdata.patch
 	
 	########################################################
 	# Wireless Networking
