sky2: initialize napi before registering device (bsc#909566 FATE#314306).

--- a/series.conf
+++ b/series.conf
@@ -14340,6 +14340,7 @@
 	patches.drivers/sky2-0038-net-sky2-remove-unnecessary-pci_set_drvdata.patch
 	patches.drivers/sky2-0039-net-Explicitly-initialize-u64_stats_sync-structures-.patch
 	patches.drivers/sky2-0040-net-sky2-calls-skb_set_hash.patch
+	patches.drivers/sky2-0041-sky2-initialize-napi-before-registering-device.patch
 	
 	########################################################
 	# Wireless Networking
