--- a/series.conf
+++ b/series.conf
@@ -14326,6 +14326,7 @@
 	patches.drivers/sky2-0024-sky2-fix-hang-in-napi_disable.patch
 	patches.drivers/sky2-0025-Sweep-away-N-A-fw_version-dustbunnies-from-the-.get_.patch
 	patches.drivers/sky2-0026-sky2-add-bql-support.patch
+	patches.drivers/sky2-0027-drivers-net-Remove-alloc_etherdev-error-messages.patch
 	
 	########################################################
 	# Wireless Networking
