--- a/series.conf
+++ b/series.conf
@@ -14316,6 +14316,7 @@
 	patches.drivers/sky2-0014-net-add-skb-frag-size-accessors.patch
 	patches.drivers/sky2-0015-sky2-fix-regression-on-Yukon-Optima.patch
 	patches.drivers/sky2-0016-sweep-the-floors-and-convert-some-.get_drvinfo-routi.patch
+	patches.drivers/sky2-0017-sky2-fix-hang-on-shutdown-and-other-irq-issues.patch
 	
 	########################################################
 	# Wireless Networking
