drivers/net/ethernet/marvell/sky2.c: fix error return code (bsc#909566 FATE#314306).

--- a/series.conf
+++ b/series.conf
@@ -14331,6 +14331,7 @@
 	patches.drivers/sky2-0029-sky2-fix-missing-register-reset-on-error-path-in-sky.patch
 	patches.drivers/sky2-0030-sky2-copy-received-packets-on-inefficient-unaligned-.patch
 	patches.drivers/sky2-0031-sky2-Added-support-for-Optima-EEE.patch
+	patches.drivers/sky2-0032-drivers-net-ethernet-marvell-sky2.c-fix-error-return.patch
 	
 	########################################################
 	# Wireless Networking
