--- a/series.conf
+++ b/series.conf
@@ -14336,6 +14336,7 @@
 	patches.drivers/sky2-0034-skge-remove-__dev-attributes.patch
 	patches.drivers/sky2-0035-drivers-net-fix-up-function-prototypes-after-__dev-r.patch
 	patches.drivers/sky2-0036-remove-init-of-dev-perm_addr-in-drivers.patch
+	patches.drivers/sky2-0037-ethernet-Remove-unnecessary-alloc-OOM-messages-alloc.patch
 	
 	########################################################
 	# Wireless Networking
