sky2: Added support for Optima EEE (bsc#909566 FATE#314306).

--- a/series.conf
+++ b/series.conf
@@ -14330,6 +14330,7 @@
 	patches.drivers/sky2-0028-sky2-dont-overwrite-settings-for-PHY-Quick-link.patch
 	patches.drivers/sky2-0029-sky2-fix-missing-register-reset-on-error-path-in-sky.patch
 	patches.drivers/sky2-0030-sky2-copy-received-packets-on-inefficient-unaligned-.patch
+	patches.drivers/sky2-0031-sky2-Added-support-for-Optima-EEE.patch
 	
 	########################################################
 	# Wireless Networking
