drivers/net: Convert remaining uses of pr_warning to pr_warn (bsc#909566 FATE#314306).

--- a/series.conf
+++ b/series.conf
@@ -14348,6 +14348,7 @@
 	patches.drivers/sky2-0046-net-get-rid-of-SET_ETHTOOL_OPS.patch
 	patches.drivers/sky2-0047-sky2-use-pci_zalloc_consistent.patch
 	patches.drivers/sky2-0048-PCI-Remove-DEFINE_PCI_DEVICE_TABLE-macro-use.patch
+	patches.drivers/sky2-0049-drivers-net-Convert-remaining-uses-of-pr_warning-to-.patch
 	
 	########################################################
 	# Wireless Networking
