sky2: fix missing register reset on error path in sky2_test_msi() (bsc#909566 FATE#314306).

--- a/series.conf
+++ b/series.conf
@@ -14328,6 +14328,7 @@
 	patches.drivers/sky2-0026-sky2-add-bql-support.patch
 	patches.drivers/sky2-0027-drivers-net-Remove-alloc_etherdev-error-messages.patch
 	patches.drivers/sky2-0028-sky2-dont-overwrite-settings-for-PHY-Quick-link.patch
+	patches.drivers/sky2-0029-sky2-fix-missing-register-reset-on-error-path-in-sky.patch
 	
 	########################################################
 	# Wireless Networking
