sky2: reduce default Tx ring size (bsc#909566 FATE#314306).

--- a/series.conf
+++ b/series.conf
@@ -14319,6 +14319,7 @@
 	patches.drivers/sky2-0017-sky2-fix-hang-on-shutdown-and-other-irq-issues.patch
 	patches.drivers/sky2-0018-sky2-pci-posting-issues.patch
 	patches.drivers/sky2-0019-sky2-rename-up-down-functions.patch
+	patches.drivers/sky2-0020-sky2-reduce-default-Tx-ring-size.patch
 	
 	########################################################
 	# Wireless Networking
