sky2: pci posting issues (bsc#909566 FATE#314306).

--- a/series.conf
+++ b/series.conf
@@ -14317,6 +14317,7 @@
 	patches.drivers/sky2-0015-sky2-fix-regression-on-Yukon-Optima.patch
 	patches.drivers/sky2-0016-sweep-the-floors-and-convert-some-.get_drvinfo-routi.patch
 	patches.drivers/sky2-0017-sky2-fix-hang-on-shutdown-and-other-irq-issues.patch
+	patches.drivers/sky2-0018-sky2-pci-posting-issues.patch
 	
 	########################################################
 	# Wireless Networking
