drivers/net: fix up function prototypes after __dev* removals (bsc#909566 FATE#314306).

--- a/series.conf
+++ b/series.conf
@@ -14334,6 +14334,7 @@
 	patches.drivers/sky2-0032-drivers-net-ethernet-marvell-sky2.c-fix-error-return.patch
 	patches.drivers/sky2-0033-sky2-fix-cleanup-sequence-in-probe-function.patch
 	patches.drivers/sky2-0034-skge-remove-__dev-attributes.patch
+	patches.drivers/sky2-0035-drivers-net-fix-up-function-prototypes-after-__dev-r.patch
 	
 	########################################################
 	# Wireless Networking
