--- a/series.conf
+++ b/series.conf
@@ -14346,6 +14346,7 @@
 	patches.drivers/sky2-0044-sky2-Don-t-receive-packets-when-the-napi-budget-0.patch
 	patches.drivers/sky2-0045-sky2-Call-dev_kfree_skb_any-instead-of-dev_kfree_skb.patch
 	patches.drivers/sky2-0046-net-get-rid-of-SET_ETHTOOL_OPS.patch
+	patches.drivers/sky2-0047-sky2-use-pci_zalloc_consistent.patch
 	
 	########################################################
 	# Wireless Networking
