remove init of dev->perm_addr in drivers (bsc#909566 FATE#314306).

--- a/series.conf
+++ b/series.conf
@@ -14335,6 +14335,7 @@
 	patches.drivers/sky2-0033-sky2-fix-cleanup-sequence-in-probe-function.patch
 	patches.drivers/sky2-0034-skge-remove-__dev-attributes.patch
 	patches.drivers/sky2-0035-drivers-net-fix-up-function-prototypes-after-__dev-r.patch
+	patches.drivers/sky2-0036-remove-init-of-dev-perm_addr-in-drivers.patch
 	
 	########################################################
 	# Wireless Networking
