--- a/series.conf
+++ b/series.conf
@@ -14325,6 +14325,7 @@
 	patches.drivers/sky2-0023-sky2-enforce-minimum-ring-size.patch
 	patches.drivers/sky2-0024-sky2-fix-hang-in-napi_disable.patch
 	patches.drivers/sky2-0025-Sweep-away-N-A-fw_version-dustbunnies-from-the-.get_.patch
+	patches.drivers/sky2-0026-sky2-add-bql-support.patch
 	
 	########################################################
 	# Wireless Networking
