net: get rid of SET_ETHTOOL_OPS (bsc#909566 FATE#314306).

--- a/series.conf
+++ b/series.conf
@@ -14345,6 +14345,7 @@
 	patches.drivers/sky2-0043-net-Replace-u64_stats_fetch_begin_bh-to-u64_stats_fe.patch
 	patches.drivers/sky2-0044-sky2-Don-t-receive-packets-when-the-napi-budget-0.patch
 	patches.drivers/sky2-0045-sky2-Call-dev_kfree_skb_any-instead-of-dev_kfree_skb.patch
+	patches.drivers/sky2-0046-net-get-rid-of-SET_ETHTOOL_OPS.patch
 	
 	########################################################
 	# Wireless Networking
