sky2: version 1.30 (bsc#909566 FATE#314306).

--- a/series.conf
+++ b/series.conf
@@ -14321,6 +14321,7 @@
 	patches.drivers/sky2-0019-sky2-rename-up-down-functions.patch
 	patches.drivers/sky2-0020-sky2-reduce-default-Tx-ring-size.patch
 	patches.drivers/sky2-0021-sky2-used-fixed-RSS-key.patch
+	patches.drivers/sky2-0022-sky2-version-1.30.patch
 	
 	########################################################
 	# Wireless Networking
