net: add skb frag size accessors (bsc#909566 FATE#314306).

--- a/series.conf
+++ b/series.conf
@@ -14313,6 +14313,7 @@
 	patches.drivers/sky2-0011-net-use-DMA_x_DEVICE-and-dma_mapping_error-with-skb_.patch
 	patches.drivers/sky2-0012-net-Remove-unnecessary-driver-assignments-of-ethtool.patch
 	patches.drivers/sky2-0013-sky2-fix-skb-truesize-underestimation.patch
+	patches.drivers/sky2-0014-net-add-skb-frag-size-accessors.patch
 	
 	########################################################
 	# Wireless Networking
