net: sky2 calls skb_set_hash (bsc#909566 FATE#314306).

--- a/series.conf
+++ b/series.conf
@@ -14339,6 +14339,7 @@
 	patches.drivers/sky2-0037-ethernet-Remove-unnecessary-alloc-OOM-messages-alloc.patch
 	patches.drivers/sky2-0038-net-sky2-remove-unnecessary-pci_set_drvdata.patch
 	patches.drivers/sky2-0039-net-Explicitly-initialize-u64_stats_sync-structures-.patch
+	patches.drivers/sky2-0040-net-sky2-calls-skb_set_hash.patch
 	
 	########################################################
 	# Wireless Networking
