--- a/series.conf
+++ b/series.conf
@@ -14310,6 +14310,7 @@
 	patches.drivers/sky2-0008-skge-sky2-mv643xx-pxa168-Move-the-Marvell-Ethernet-d.patch
 	patches.drivers/sky2-0009-sky2-convert-to-SKB-paged-frag-API.patch
 	patches.drivers/sky2-0010-sky2-manage-irq-better-on-single-port-card.patch
+	patches.drivers/sky2-0011-net-use-DMA_x_DEVICE-and-dma_mapping_error-with-skb_.patch
 	
 	########################################################
 	# Wireless Networking
