sky2: rename up/down functions (bsc#909566 FATE#314306).

--- a/series.conf
+++ b/series.conf
@@ -14318,6 +14318,7 @@
 	patches.drivers/sky2-0016-sweep-the-floors-and-convert-some-.get_drvinfo-routi.patch
 	patches.drivers/sky2-0017-sky2-fix-hang-on-shutdown-and-other-irq-issues.patch
 	patches.drivers/sky2-0018-sky2-pci-posting-issues.patch
+	patches.drivers/sky2-0019-sky2-rename-up-down-functions.patch
 	
 	########################################################
 	# Wireless Networking
