PCI: Remove DEFINE_PCI_DEVICE_TABLE macro use (bsc#909566 FATE#314306).

--- a/series.conf
+++ b/series.conf
@@ -14347,6 +14347,7 @@
 	patches.drivers/sky2-0045-sky2-Call-dev_kfree_skb_any-instead-of-dev_kfree_skb.patch
 	patches.drivers/sky2-0046-net-get-rid-of-SET_ETHTOOL_OPS.patch
 	patches.drivers/sky2-0047-sky2-use-pci_zalloc_consistent.patch
+	patches.drivers/sky2-0048-PCI-Remove-DEFINE_PCI_DEVICE_TABLE-macro-use.patch
 	
 	########################################################
 	# Wireless Networking
