--- a/series.conf
+++ b/series.conf
@@ -14329,6 +14329,7 @@
 	patches.drivers/sky2-0027-drivers-net-Remove-alloc_etherdev-error-messages.patch
 	patches.drivers/sky2-0028-sky2-dont-overwrite-settings-for-PHY-Quick-link.patch
 	patches.drivers/sky2-0029-sky2-fix-missing-register-reset-on-error-path-in-sky.patch
+	patches.drivers/sky2-0030-sky2-copy-received-packets-on-inefficient-unaligned-.patch
 	
 	########################################################
 	# Wireless Networking
