sky2: allow mac to come from dt (bsc#909566 FATE#314306).

--- a/series.conf
+++ b/series.conf
@@ -14341,6 +14341,7 @@
 	patches.drivers/sky2-0039-net-Explicitly-initialize-u64_stats_sync-structures-.patch
 	patches.drivers/sky2-0040-net-sky2-calls-skb_set_hash.patch
 	patches.drivers/sky2-0041-sky2-initialize-napi-before-registering-device.patch
+	patches.drivers/sky2-0042-sky2-allow-mac-to-come-from-dt.patch
 	
 	########################################################
 	# Wireless Networking
