sky2: fix regression on Yukon Optima (bsc#909566 FATE#314306).

--- a/series.conf
+++ b/series.conf
@@ -14314,6 +14314,7 @@
 	patches.drivers/sky2-0012-net-Remove-unnecessary-driver-assignments-of-ethtool.patch
 	patches.drivers/sky2-0013-sky2-fix-skb-truesize-underestimation.patch
 	patches.drivers/sky2-0014-net-add-skb-frag-size-accessors.patch
+	patches.drivers/sky2-0015-sky2-fix-regression-on-Yukon-Optima.patch
 	
 	########################################################
 	# Wireless Networking
