skge: remove __dev* attributes (bsc#909566 FATE#314306).

--- a/series.conf
+++ b/series.conf
@@ -14333,6 +14333,7 @@
 	patches.drivers/sky2-0031-sky2-Added-support-for-Optima-EEE.patch
 	patches.drivers/sky2-0032-drivers-net-ethernet-marvell-sky2.c-fix-error-return.patch
 	patches.drivers/sky2-0033-sky2-fix-cleanup-sequence-in-probe-function.patch
+	patches.drivers/sky2-0034-skge-remove-__dev-attributes.patch
 	
 	########################################################
 	# Wireless Networking
