--- a/series.conf
+++ b/series.conf
@@ -17961,6 +17961,7 @@
 	patches.arch/kvm-nvmx-copy-vmcs12-to-processor-specific-shadow-vmcs.patch
 	patches.arch/kvm-nvmx-synchronize-vmcs12-content-with-the-shadow-vmcs.patch
 	patches.arch/kvm-nvmx-enable-and-disable-shadow-vmcs-functionality.patch
+	patches.arch/kvm-nvmx-change-location-of-3-functions-in-vmx-c.patch
 
 	# FATE#314895, bsc#801138 - Enable x2APIC on vmware
 	patches.arch/kvm-add-x86_hyper_kvm-to-complete-detect_hypervisor_platform-check.patch
