KVM: vmx: disable APIC virtualization in nested guests (FATE#317460).

--- a/series.conf
+++ b/series.conf
@@ -17963,6 +17963,7 @@
 	patches.arch/kvm-nvmx-enable-and-disable-shadow-vmcs-functionality.patch
 	patches.arch/kvm-nvmx-change-location-of-3-functions-in-vmx-c.patch
 	patches.arch/kvm-nvmx-set-success-rflags-when-emulate-vmxon-vmxoff-in-nested-virt.patch
+	patches.arch/kvm-vmx-disable-apic-virtualization-in-nested-guests.patch
 
 	# FATE#314895, bsc#801138 - Enable x2APIC on vmware
 	patches.arch/kvm-add-x86_hyper_kvm-to-complete-detect_hypervisor_platform-check.patch
