--- a/series.conf
+++ b/series.conf
@@ -17953,6 +17953,7 @@
 	patches.arch/kvm-nvmx-shadow-vmcs-control-fields-bits.patch
 	patches.arch/kvm-nvmx-detect-shadow-vmcs-capability.patch
 	patches.arch/kvm-nvmx-introduce-vmread-and-vmwrite-bitmaps.patch
+	patches.arch/kvm-nvmx-refactor-handle_vmwrite.patch
 
 	# FATE#314895, bsc#801138 - Enable x2APIC on vmware
 	patches.arch/kvm-add-x86_hyper_kvm-to-complete-detect_hypervisor_platform-check.patch
