KVM: nVMX: Shadow-vmcs control fields/bits (FATE#317460).

--- a/series.conf
+++ b/series.conf
@@ -17950,6 +17950,7 @@
 	patches.arch/kvm-nvmx-rework-event-injection-and-recovery.patch
 	patches.arch/kvm-nvmx-check-vmcs12-for-valid-activity-state.patch
 	patches.arch/kvm-vmx-fix-check-guest-state-validity-if-a-guest-is-in-vm86-mode.patch
+	patches.arch/kvm-nvmx-shadow-vmcs-control-fields-bits.patch
 
 	# FATE#314895, bsc#801138 - Enable x2APIC on vmware
 	patches.arch/kvm-add-x86_hyper_kvm-to-complete-detect_hypervisor_platform-check.patch
