KVM: nVMX: Synchronize VMCS12 content with the shadow vmcs (FATE#317460).

--- a/series.conf
+++ b/series.conf
@@ -17959,6 +17959,7 @@
 	patches.arch/kvm-nvmx-release-shadow-vmcs.patch
 	patches.arch/kvm-nvmx-copy-processor-specific-shadow-vmcs-to-vmcs12.patch
 	patches.arch/kvm-nvmx-copy-vmcs12-to-processor-specific-shadow-vmcs.patch
+	patches.arch/kvm-nvmx-synchronize-vmcs12-content-with-the-shadow-vmcs.patch
 
 	# FATE#314895, bsc#801138 - Enable x2APIC on vmware
 	patches.arch/kvm-add-x86_hyper_kvm-to-complete-detect_hypervisor_platform-check.patch
