KVM: x86: fix memory leak in vmx_init (FATE#317460).

--- a/series.conf
+++ b/series.conf
@@ -17945,6 +17945,7 @@
 	patches.arch/kvm-nvmx-fix-setting-of-cr0-and-cr4-in-guest-mode.patch
 	patches.arch/kvm-nvmx-provide-efer-lma-saving-support.patch
 	patches.arch/kvm-nvmx-check-exit-control-for-vm_exit_save_ia32_pat-not-entry-controls.patch
+	patches.arch/kvm-x86-fix-memory-leak-in-vmx_init.patch
 
 	# FATE#314895, bsc#801138 - Enable x2APIC on vmware
 	patches.arch/kvm-add-x86_hyper_kvm-to-complete-detect_hypervisor_platform-check.patch
