--- a/series.conf
+++ b/series.conf
@@ -17949,6 +17949,7 @@
 	patches.arch/kvm-nvmx-fix-injection-of-pending_interrupt-and-nmi_window-exits-to-l1.patch
 	patches.arch/kvm-nvmx-rework-event-injection-and-recovery.patch
 	patches.arch/kvm-nvmx-check-vmcs12-for-valid-activity-state.patch
+	patches.arch/kvm-vmx-fix-check-guest-state-validity-if-a-guest-is-in-vm86-mode.patch
 
 	# FATE#314895, bsc#801138 - Enable x2APIC on vmware
 	patches.arch/kvm-add-x86_hyper_kvm-to-complete-detect_hypervisor_platform-check.patch
