--- a/series.conf
+++ b/series.conf
@@ -17944,6 +17944,7 @@
 	patches.arch/kvm-nvmx-fix-content-of-msr_ia32_vmx_entry-exit_ctls.patch
 	patches.arch/kvm-nvmx-fix-setting-of-cr0-and-cr4-in-guest-mode.patch
 	patches.arch/kvm-nvmx-provide-efer-lma-saving-support.patch
+	patches.arch/kvm-nvmx-check-exit-control-for-vm_exit_save_ia32_pat-not-entry-controls.patch
 
 	# FATE#314895, bsc#801138 - Enable x2APIC on vmware
 	patches.arch/kvm-add-x86_hyper_kvm-to-complete-detect_hypervisor_platform-check.patch
