KVM: nVMX: Add KVM_REQ_IMMEDIATE_EXIT (FATE#317460).

--- a/series.conf
+++ b/series.conf
@@ -17934,6 +17934,9 @@
 	# bsc#909078, CVE-2014-8134
 	patches.arch/x86-kvm-clear-paravirt_enabled-on-kvm-guests-for-espfix32-s-benefit.patch
 
+	# FATE#317460 (shadow vmcs - improved nested virtualization)
+	patches.arch/kvm-nvmx-add-kvm_req_immediate_exit.patch
+
 	# FATE#314895, bsc#801138 - Enable x2APIC on vmware
 	patches.arch/kvm-add-x86_hyper_kvm-to-complete-detect_hypervisor_platform-check.patch
 	patches.arch/x86-apic-allow-x2apic-without-ir-on-vmware-platform.patch
