KVM: nVMX: Clear segment cache after switching between L1 and L2 (FATE#317460).

--- a/series.conf
+++ b/series.conf
@@ -17938,6 +17938,7 @@
 	patches.arch/kvm-nvmx-add-kvm_req_immediate_exit.patch
 	patches.arch/kvm-nvmx-fix-warning-causing-idt-vectoring-info-behavior.patch
 	patches.arch/kvm-nvmx-fix-erroneous-exception-bitmap-check.patch
+	patches.arch/kvm-nvmx-clear-segment-cache-after-switching-between-l1-and-l2.patch
 
 	# FATE#314895, bsc#801138 - Enable x2APIC on vmware
 	patches.arch/kvm-add-x86_hyper_kvm-to-complete-detect_hypervisor_platform-check.patch
