KVM: nVMX: Provide EFER.LMA saving support (FATE#317460).

--- a/series.conf
+++ b/series.conf
@@ -17943,6 +17943,7 @@
 	patches.arch/kvm-nvmx-reset-rflags-on-vm-exit.patch
 	patches.arch/kvm-nvmx-fix-content-of-msr_ia32_vmx_entry-exit_ctls.patch
 	patches.arch/kvm-nvmx-fix-setting-of-cr0-and-cr4-in-guest-mode.patch
+	patches.arch/kvm-nvmx-provide-efer-lma-saving-support.patch
 
 	# FATE#314895, bsc#801138 - Enable x2APIC on vmware
 	patches.arch/kvm-add-x86_hyper_kvm-to-complete-detect_hypervisor_platform-check.patch
