--- a/series.conf
+++ b/series.conf
@@ -17939,6 +17939,7 @@
 	patches.arch/kvm-nvmx-fix-warning-causing-idt-vectoring-info-behavior.patch
 	patches.arch/kvm-nvmx-fix-erroneous-exception-bitmap-check.patch
 	patches.arch/kvm-nvmx-clear-segment-cache-after-switching-between-l1-and-l2.patch
+	patches.arch/kvm-nvmx-fix-switching-of-debug-state.patch
 
 	# FATE#314895, bsc#801138 - Enable x2APIC on vmware
 	patches.arch/kvm-add-x86_hyper_kvm-to-complete-detect_hypervisor_platform-check.patch
