KVM: nVMX: Fix content of MSR_IA32_VMX_ENTRY/EXIT_CTLS (FATE#317460).

--- a/series.conf
+++ b/series.conf
@@ -17941,6 +17941,7 @@
 	patches.arch/kvm-nvmx-clear-segment-cache-after-switching-between-l1-and-l2.patch
 	patches.arch/kvm-nvmx-fix-switching-of-debug-state.patch
 	patches.arch/kvm-nvmx-reset-rflags-on-vm-exit.patch
+	patches.arch/kvm-nvmx-fix-content-of-msr_ia32_vmx_entry-exit_ctls.patch
 
 	# FATE#314895, bsc#801138 - Enable x2APIC on vmware
 	patches.arch/kvm-add-x86_hyper_kvm-to-complete-detect_hypervisor_platform-check.patch
