--- a/series.conf
+++ b/series.conf
@@ -17948,6 +17948,7 @@
 	patches.arch/kvm-x86-fix-memory-leak-in-vmx_init.patch
 	patches.arch/kvm-nvmx-fix-injection-of-pending_interrupt-and-nmi_window-exits-to-l1.patch
 	patches.arch/kvm-nvmx-rework-event-injection-and-recovery.patch
+	patches.arch/kvm-nvmx-check-vmcs12-for-valid-activity-state.patch
 
 	# FATE#314895, bsc#801138 - Enable x2APIC on vmware
 	patches.arch/kvm-add-x86_hyper_kvm-to-complete-detect_hypervisor_platform-check.patch
