--- a/series.conf
+++ b/series.conf
@@ -17937,6 +17937,7 @@
 	# FATE#317460 (shadow vmcs - improved nested virtualization)
 	patches.arch/kvm-nvmx-add-kvm_req_immediate_exit.patch
 	patches.arch/kvm-nvmx-fix-warning-causing-idt-vectoring-info-behavior.patch
+	patches.arch/kvm-nvmx-fix-erroneous-exception-bitmap-check.patch
 
 	# FATE#314895, bsc#801138 - Enable x2APIC on vmware
 	patches.arch/kvm-add-x86_hyper_kvm-to-complete-detect_hypervisor_platform-check.patch
