--- a/series.conf
+++ b/series.conf
@@ -17955,6 +17955,7 @@
 	patches.arch/kvm-nvmx-introduce-vmread-and-vmwrite-bitmaps.patch
 	patches.arch/kvm-nvmx-refactor-handle_vmwrite.patch
 	patches.arch/kvm-nvmx-fix-vmxon-emulation.patch
+	patches.arch/kvm-nvmx-allocate-shadow-vmcs.patch
 
 	# FATE#314895, bsc#801138 - Enable x2APIC on vmware
 	patches.arch/kvm-add-x86_hyper_kvm-to-complete-detect_hypervisor_platform-check.patch
