--- a/series.conf
+++ b/series.conf
@@ -17957,6 +17957,7 @@
 	patches.arch/kvm-nvmx-fix-vmxon-emulation.patch
 	patches.arch/kvm-nvmx-allocate-shadow-vmcs.patch
 	patches.arch/kvm-nvmx-release-shadow-vmcs.patch
+	patches.arch/kvm-nvmx-copy-processor-specific-shadow-vmcs-to-vmcs12.patch
 
 	# FATE#314895, bsc#801138 - Enable x2APIC on vmware
 	patches.arch/kvm-add-x86_hyper_kvm-to-complete-detect_hypervisor_platform-check.patch
