include/linux/mm.h: add PAGE_ALIGNED() helper (FATE#317317).

--- a/series.conf
+++ b/series.conf
@@ -17231,6 +17231,9 @@
 
 	patches.fixes/kexec-add-the-values-related-to-buddy-system-for-filtering-free-pages.patch
 
+	# FATE#317317
+	patches.suse/add-PAGE_ALIGNED-helper
+
 	########################################################
 	# Audit
 	########################################################
