vmcore: clean up read_vmcore() (FATE#317317).

--- a/series.conf
+++ b/series.conf
@@ -17233,6 +17233,7 @@
 
 	# FATE#317317
 	patches.suse/add-PAGE_ALIGNED-helper
+	patches.suse/vmcore-clean-up-read_vmcore
 
 	########################################################
 	# Audit
