vmcore: allocate buffer for ELF headers on page-size alignment (FATE#317317).

--- a/series.conf
+++ b/series.conf
@@ -17234,6 +17234,7 @@
 	# FATE#317317
 	patches.suse/add-PAGE_ALIGNED-helper
 	patches.suse/vmcore-clean-up-read_vmcore
+	patches.suse/vmcore-allocate-ELF-headers-page-aligned
 
 	########################################################
 	# Audit
