--- a/series.conf
+++ b/series.conf
@@ -17235,6 +17235,7 @@
 	patches.suse/add-PAGE_ALIGNED-helper
 	patches.suse/vmcore-clean-up-read_vmcore
 	patches.suse/vmcore-allocate-ELF-headers-page-aligned
+	patches.suse/vmcore-PT_LOAD-memory-chunks-page-aligned
 
 	########################################################
 	# Audit
