--- a/series.conf
+++ b/series.conf
@@ -17236,6 +17236,7 @@
 	patches.suse/vmcore-clean-up-read_vmcore
 	patches.suse/vmcore-allocate-ELF-headers-page-aligned
 	patches.suse/vmcore-PT_LOAD-memory-chunks-page-aligned
+	patches.suse/vmalloc-make-find_vm_area-check-in-range
 
 	########################################################
 	# Audit
