vmalloc: introduce remap_vmalloc_range_partial (FATE#317317).

--- a/series.conf
+++ b/series.conf
@@ -17237,6 +17237,7 @@
 	patches.suse/vmcore-allocate-ELF-headers-page-aligned
 	patches.suse/vmcore-PT_LOAD-memory-chunks-page-aligned
 	patches.suse/vmalloc-make-find_vm_area-check-in-range
+	patches.suse/vmalloc-introduce-remap_vmalloc_range_partial
 
 	########################################################
 	# Audit
