vmcore: allocate ELF note segment in the 2nd kernel vmalloc memory (FATE#317317).

--- a/series.conf
+++ b/series.conf
@@ -17238,6 +17238,7 @@
 	patches.suse/vmcore-PT_LOAD-memory-chunks-page-aligned
 	patches.suse/vmalloc-make-find_vm_area-check-in-range
 	patches.suse/vmalloc-introduce-remap_vmalloc_range_partial
+	patches.suse/vmcore-allocate-ELF-note-segment-in-kdump-kernel
 
 	########################################################
 	# Audit
