vmcore: allow user process to remap ELF note segment buffer (FATE#317317).

--- a/series.conf
+++ b/series.conf
@@ -17239,6 +17239,7 @@
 	patches.suse/vmalloc-make-find_vm_area-check-in-range
 	patches.suse/vmalloc-introduce-remap_vmalloc_range_partial
 	patches.suse/vmcore-allocate-ELF-note-segment-in-kdump-kernel
+	patches.suse/vmcore-allow-userspace-remap-ELF-note-segment-buffer
 
 	########################################################
 	# Audit
