--- a/series.conf
+++ b/series.conf
@@ -17240,6 +17240,7 @@
 	patches.suse/vmalloc-introduce-remap_vmalloc_range_partial
 	patches.suse/vmcore-allocate-ELF-note-segment-in-kdump-kernel
 	patches.suse/vmcore-allow-userspace-remap-ELF-note-segment-buffer
+	patches.suse/vmcore-unify-vmcore-file-size-calculation
 
 	########################################################
 	# Audit
