vmcore: support mmap() on /proc/vmcore (FATE#317317).

--- a/series.conf
+++ b/series.conf
@@ -17241,6 +17241,7 @@
 	patches.suse/vmcore-allocate-ELF-note-segment-in-kdump-kernel
 	patches.suse/vmcore-allow-userspace-remap-ELF-note-segment-buffer
 	patches.suse/vmcore-unify-vmcore-file-size-calculation
+	patches.suse/vmcore-support-mmap-on-proc-vmcore
 
 	########################################################
 	# Audit
