- x86/efi: Add EFI framebuffer earlyprintk support (FATE#317449). - x86/efi: Fix earlyprintk off-by-one bug (FATE#317449). - x86/efi: earlyprintk=efi,keep fix (FATE#317449). - Refresh patches.xen/xen-x86-EFI. - Refresh patches.xen/xen-x86_64-unmapped-initrd.

--- a/series.conf
+++ b/series.conf
@@ -19415,6 +19415,11 @@
 	patches.arch/mce-acpi-apei-add-a-boot-option-to-disable-ff-mode-for-corrected-errors.patch
 	patches.arch/mce-acpi-apei-soft-offline-a-page-on-firmware-ghes-notification.patch
 
+	# FATE#317449
+	patches.drivers/0001-x86-efi-Add-EFI-framebuffer-earlyprintk-support.patch 
+	patches.drivers/0002-x86-efi-Fix-earlyprintk-off-by-one-bug.patch 
+	patches.drivers/0003-x86-efi-earlyprintk-efi-keep-fix.patch
+
 	########################################################
 	# You'd better have a good reason for adding a patch
 	# below here.
