--- a/series.conf
+++ b/series.conf
@@ -17977,6 +17977,7 @@
 	patches.arch/kvm-nvmx-synchronize-vmcs12-content-with-the-shadow-vmcs.patch
 	patches.arch/kvm-nvmx-enable-and-disable-shadow-vmcs-functionality.patch
 	patches.arch/kvm-x86-rework-request-for-immediate-exit.patch
+	patches.arch/kvm-nvmx-skip-pf-interception-check-when-queuing-during-nested-run.patch
 	patches.arch/kvm-nvmx-change-location-of-3-functions-in-vmx-c.patch
 	patches.arch/kvm-nvmx-set-success-rflags-when-emulate-vmxon-vmxoff-in-nested-virt.patch
 	patches.arch/kvm-vmx-disable-apic-virtualization-in-nested-guests.patch
