intel_idle: fine-tune IVT residency targets (FATE#317686).

--- a/series.conf
+++ b/series.conf
@@ -1831,6 +1831,9 @@
 	# FATE#317428 intel_idle Intel Atom Processor C2000
 	patches.arch/0001-intel_idle-Support-Intel-Atom-Processor-C2000-Produc.patch
 
+	# FATE#317686
+	patches.arch/intel_idle-fine-tune-IVT-residency-targets
+
 	########################################################
 	# Suse specific stuff
 	########################################################
