kernel: incorrect clock_gettime result (bnc#915209, LTC#121184).

--- a/series.conf
+++ b/series.conf
@@ -1159,6 +1159,7 @@
 	patches.arch/s390-25-01-zcrypt-fix-test-config-domain.patch
 
 	patches.arch/s390-sles11sp3-26-01-3215-tty-close-crash.patch
+	patches.arch/s390-sles11sp3-26-02-vdso-thread-cputime.patch
 
 	########################################################
 	# VM/FS patches
