kernel: 3215 tty close crash (bnc#915209, LTC#120873).

--- a/series.conf
+++ b/series.conf
@@ -1158,6 +1158,8 @@
 
 	patches.arch/s390-25-01-zcrypt-fix-test-config-domain.patch
 
+	patches.arch/s390-sles11sp3-26-01-3215-tty-close-crash.patch
+
 	########################################################
 	# VM/FS patches
 	########################################################
