zcrypt: Number of supported ap domains is not retrievable (bnc#915209, LTC#120788).

--- a/series.conf
+++ b/series.conf
@@ -1160,6 +1160,7 @@
 
 	patches.arch/s390-sles11sp3-26-01-3215-tty-close-crash.patch
 	patches.arch/s390-sles11sp3-26-02-vdso-thread-cputime.patch
+	patches.arch/s390-sles11sp3-26-03-zcrypt-ap-max-domain-id.patch
 
 	########################################################
 	# VM/FS patches
