nfsd: fix EXDEV checking in rename (bnc#915791).

--- a/series.conf
+++ b/series.conf
@@ -5022,6 +5022,7 @@
 	patches.fixes/0001-pnfs-defer-release-of-pages-in-layoutget.patch
 	patches.fixes/0002-NFSv4.1-Don-t-decode-skipped-layoutgets.patch
 	patches.fixes/0001-NFS-don-t-use-STABLE-writes-during-writeback.patch
+	patches.fixes/0001-nfsd-fix-EXDEV-checking-in-rename.patch
 
 	########################################################
 	# Netfilter
