random: account for entropy loss due to overwrites (FATE#317374).

--- a/series.conf
+++ b/series.conf
@@ -16766,6 +16766,7 @@
 	# bsc#904901 / FATE#317374
 	patches.fixes/random-01-statically-compute-poolbitshift,-poolbytes,-poolbits
 	patches.fixes/random-02-allow-fractional-bits-to-be-tracked
+	patches.fixes/random-03-account-for-entropy-loss-due-to-overwrites
 
 	########################################################
 	# Other drivers we have added to the tree
