random: allow fractional bits to be tracked (FATE#317374).

--- a/series.conf
+++ b/series.conf
@@ -16765,6 +16765,7 @@
 
 	# bsc#904901 / FATE#317374
 	patches.fixes/random-01-statically-compute-poolbitshift,-poolbytes,-poolbits
+	patches.fixes/random-02-allow-fractional-bits-to-be-tracked
 
 	########################################################
 	# Other drivers we have added to the tree
