random: statically compute poolbitshift, poolbytes, poolbits (FATE#317374).

--- a/series.conf
+++ b/series.conf
@@ -16763,6 +16763,9 @@
 	# Coleto Creek Intel chipset support (FATE#317357)
 	patches.arch/0001-mfd-lpc_ich-iTCO_wdt-patch-for-Intel-Coleto-Creek-De.patch
 
+	# bsc#904901 / FATE#317374
+	patches.fixes/random-01-statically-compute-poolbitshift,-poolbytes,-poolbits
+
 	########################################################
 	# Other drivers we have added to the tree
 	########################################################
