- writeback: consolidate variable names in balance_dirty_pages(). - Refresh   patches.fixes/mm-properly-reflect-task-dirty-limits-in-dirty_excee.patch.

--- a/series.conf
+++ b/series.conf
@@ -1304,6 +1304,7 @@
 	patches.fixes/writeback-skip-tmpfs-early-in-balance_dirty_pages_ra.patch
 	patches.fixes/writeback-don-t-busy-retry-writeback-on-new-freeing-.patch
 	patches.fixes/writeback-don-t-busy-retry-the-inode-on-failed-grab_super_pass.patch
+	patches.fixes/writeback-consolidate-variable-names-in-balance_dirt.patch
 	patches.fixes/mm-properly-reflect-task-dirty-limits-in-dirty_excee.patch
 	patches.fixes/oom-thaw-threads-if-oom-killed-thread-is-frozen-befo.patch
 
