igb: Update version number (fate#317388, bsc#909491).

--- a/series.conf
+++ b/series.conf
@@ -14444,6 +14444,7 @@
 	patches.drivers/0078-igb-Support-to-get-2_5G-link-status-for-appropriate-.patch
 	patches.drivers/0079-igb-Get-speed-and-duplex-for-1G-non_copper-devices.patch
 	patches.drivers/0080-igb-Implementation-to-report-advertised-supported-li.patch
+	patches.drivers/0081-igb-Update-version-number.patch
 
 	########################################################
 	# Wireless Networking
