igb: Fix null pointer dereference (fate#317388, bsc#909491).

--- a/series.conf
+++ b/series.conf
@@ -14395,6 +14395,7 @@
 	patches.drivers/0029-igb-Fix-link-setup-for-I210-devices.patch
 	patches.drivers/0030-igb-Fix-for-lockdep-issue-in-igb_get_i2c_client.patch
 	patches.drivers/0031-igb-fix-i350-anti-spoofing-config.patch
+	patches.drivers/0032-igb-Fix-null-pointer-dereference.patch
 
 	########################################################
 	# Wireless Networking
