igb/ixgbe: remove return statements for void functions (fate#317388, bsc#909491).

--- a/series.conf
+++ b/series.conf
@@ -14506,6 +14506,7 @@
 	patches.drivers/0140-igb-Replace-1-0-return-values-with-true-false.patch
 	patches.drivers/0141-igb-Change-memcpy-to-struct-assignment.patch
 	patches.drivers/0142-net-get-rid-of-SET_ETHTOOL_OPS.patch
+	patches.drivers/0143-igb-ixgbe-remove-return-statements-for-void-function.patch
 
 	########################################################
 	# Wireless Networking
