igb: unhide invariant returns (fate#317388, bsc#909491).

--- a/series.conf
+++ b/series.conf
@@ -14514,6 +14514,7 @@
 	patches.drivers/0148-igb-add-defaults-for-i210-TX-RX-PBSIZE.patch
 	patches.drivers/0149-net-use-SPEED_UNKNOWN-and-DUPLEX_UNKNOWN-when-approp.patch
 	patches.drivers/0150-net-use-ethtool_cmd_speed_set-helper-to-set-ethtool-.patch
+	patches.drivers/0151-igb-unhide-invariant-returns.patch
 
 	########################################################
 	# Wireless Networking
