--- a/series.conf
+++ b/series.conf
@@ -14492,6 +14492,7 @@
 	patches.drivers/0126-igb-Cleanups-for-messaging.patch
 	patches.drivers/0127-igb-Cleanups-to-fix-braces-location-warnings.patch
 	patches.drivers/0128-igb-Cleanups-to-fix-incorrect-indentation.patch
+	patches.drivers/0129-igb-Cleanups-to-fix-pointer-location-error.patch
 
 	########################################################
 	# Wireless Networking
