igb: Implementation of i210/i211 LED support (fate#317388, bsc#909491).

--- a/series.conf
+++ b/series.conf
@@ -14423,6 +14423,7 @@
 	patches.drivers/0057-igb-SerDes-flow-control-setting.patch
 	patches.drivers/0058-igb-Fix-set_ethtool-function-to-call-update-nvm-for-.patch
 	patches.drivers/0059-igb-Fix-possible-panic-caused-by-Rx-traffic-arrival-.patch
+	patches.drivers/0060-igb-Implementation-of-i210-i211-LED-support.patch
 
 	########################################################
 	# Wireless Networking
