net/compat: Merge multiple implementations of ifreq::ifr_data conversion (fate#317388, bsc#909491).

--- a/series.conf
+++ b/series.conf
@@ -14366,6 +14366,7 @@
 	# igb SP4 update (fate#317388, bsc#909491)
 	patches.drivers/0001-ethernet-Use-eth_random_addr.patch
 	patches.drivers/0002-etherdevice-introduce-help-function-eth_zero_addr.patch
+	patches.drivers/0003-net-compat-Merge-multiple-implementations-of-ifreq-i.patch
 
 	########################################################
 	# Wireless Networking
