--- a/series.conf
+++ b/series.conf
@@ -14524,6 +14524,7 @@
 	patches.drivers/0158-igb-bump-igb-version-to-5.2.13.patch
 	patches.drivers/0159-igb-remove-blocking-phy-read-from-inside-spinlock.patch
 	patches.drivers/0160-i40e-igb-Convert-to-dev_consume_skb_any.patch
+	patches.drivers/0161-igb-bump-version-to-5.2.15.patch
 
 	########################################################
 	# Wireless Networking
