igb: Cleanups to fix line length warnings (fate#317388, bsc#909491).

--- a/series.conf
+++ b/series.conf
@@ -14498,6 +14498,7 @@
 	patches.drivers/0132-igb-Cleanups-to-fix-assignment-in-if-error.patch
 	patches.drivers/0133-igb-Cleanups-to-fix-missing-break-in-switch-statemen.patch
 	patches.drivers/0134-igb-Cleanups-to-remove-return-parentheses.patch
+	patches.drivers/0135-igb-Cleanups-to-fix-line-length-warnings.patch
 
 	########################################################
 	# Wireless Networking
