igb: Implementation of 1-sec delay for i210 devices (fate#317388, bsc#909491).

--- a/series.conf
+++ b/series.conf
@@ -14437,6 +14437,7 @@
 	patches.drivers/0071-igb-Add-macro-for-size-of-RETA-indirection-table.patch
 	patches.drivers/0072-igb-Expose-RSS-indirection-table-for-ethtool.patch
 	patches.drivers/0073-igb-Don-t-look-for-a-PBA-in-the-iNVM-when-flashless.patch
+	patches.drivers/0074-igb-Implementation-of-1-sec-delay-for-i210-devices.patch
 
 	########################################################
 	# Wireless Networking
