igb: Cleanups to fix static initialization (fate#317388, bsc#909491).

--- a/series.conf
+++ b/series.conf
@@ -14500,6 +14500,7 @@
 	patches.drivers/0134-igb-Cleanups-to-remove-return-parentheses.patch
 	patches.drivers/0135-igb-Cleanups-to-fix-line-length-warnings.patch
 	patches.drivers/0136-igb-Cleanups-to-fix-msleep-warnings.patch
+	patches.drivers/0137-igb-Cleanups-to-fix-static-initialization.patch
 
 	########################################################
 	# Wireless Networking
