igb: Add update to last_rx_timestamp in Rx rings (fate#317388, bsc#909491).

--- a/series.conf
+++ b/series.conf
@@ -14418,6 +14418,7 @@
 	patches.drivers/0052-igb-Bump-version-of-driver.patch
 	patches.drivers/0053-igb-limit-udelay-for-phy-changes-to-10000us.patch
 	patches.drivers/0054-igb-Changed-LEDs-blink-mechanism-to-include-designs-.patch
+	patches.drivers/0055-igb-Add-update-to-last_rx_timestamp-in-Rx-rings.patch
 
 	########################################################
 	# Wireless Networking
