--- a/series.conf
+++ b/series.conf
@@ -14525,6 +14525,7 @@
 	patches.drivers/0159-igb-remove-blocking-phy-read-from-inside-spinlock.patch
 	patches.drivers/0160-i40e-igb-Convert-to-dev_consume_skb_any.patch
 	patches.drivers/0161-igb-bump-version-to-5.2.15.patch
+	patches.drivers/0162-igb-don-t-reuse-pages-with-pfmemalloc-flag.patch
 
 	########################################################
 	# Wireless Networking
