igb: Bump version of driver (fate#317388, bsc#909491).

--- a/series.conf
+++ b/series.conf
@@ -14415,6 +14415,7 @@
 	patches.drivers/0049-igb-Retain-HW-VLAN-filtering-while-in-promiscuous-VT.patch
 	patches.drivers/0050-igb-Remove-dead-code-path.patch
 	patches.drivers/0051-igb-Remove-id-s-that-will-not-be-productized-for-Lin.patch
+	patches.drivers/0052-igb-Bump-version-of-driver.patch
 
 	########################################################
 	# Wireless Networking
