igb: Enable hwmon data output for thermal sensors via I2C (fate#317388, bsc#909491).

--- a/series.conf
+++ b/series.conf
@@ -14372,6 +14372,7 @@
 	patches.drivers/0006-remove-init-of-dev-perm_addr-in-drivers.patch
 	patches.drivers/0007-igb-Add-i2c-interface-to-igb.patch
 	patches.drivers/0008-igb-Add-support-functions-to-access-thermal-data.patch
+	patches.drivers/0009-igb-Enable-hwmon-data-output-for-thermal-sensors-via.patch
 
 	########################################################
 	# Wireless Networking
