igb: Update link modes display in ethtool (fate#317388, bsc#909491).

--- a/series.conf
+++ b/series.conf
@@ -14456,6 +14456,7 @@
 	patches.drivers/0090-igb-Fix-master-slave-mode-for-all-m88-i354-PHY-s.patch
 	patches.drivers/0091-igb-Don-t-let-ethtool-try-to-write-to-iNVM-in-i210-i.patch
 	patches.drivers/0092-net-Explicitly-initialize-u64_stats_sync-structures-.patch
+	patches.drivers/0093-igb-Update-link-modes-display-in-ethtool.patch
 
 	########################################################
 	# Wireless Networking
