--- a/series.conf
+++ b/series.conf
@@ -14425,6 +14425,7 @@
 	patches.drivers/0059-igb-Fix-possible-panic-caused-by-Rx-traffic-arrival-.patch
 	patches.drivers/0060-igb-Implementation-of-i210-i211-LED-support.patch
 	patches.drivers/0061-igb-Removed-unused-i2c-function.patch
+	patches.drivers/0062-treewide-relase-release.patch
 
 	########################################################
 	# Wireless Networking
