igb: Replace 1/0 return values with true/false (fate#317388, bsc#909491).

--- a/series.conf
+++ b/series.conf
@@ -14503,6 +14503,7 @@
 	patches.drivers/0137-igb-Cleanups-to-fix-static-initialization.patch
 	patches.drivers/0138-igb-Cleanups-to-replace-deprecated-DEFINE_PCI_DEVICE.patch
 	patches.drivers/0139-igb-Cleanups-to-remove-unneeded-extern-declaration.patch
+	patches.drivers/0140-igb-Replace-1-0-return-values-with-true-false.patch
 
 	########################################################
 	# Wireless Networking
