i40e/igb: Convert to dev_consume_skb_any() (fate#317388, bsc#909491).

--- a/series.conf
+++ b/series.conf
@@ -14523,6 +14523,7 @@
 	patches.drivers/0157-igb-Add-message-when-malformed-packets-detected-by-h.patch
 	patches.drivers/0158-igb-bump-igb-version-to-5.2.13.patch
 	patches.drivers/0159-igb-remove-blocking-phy-read-from-inside-spinlock.patch
+	patches.drivers/0160-i40e-igb-Convert-to-dev_consume_skb_any.patch
 
 	########################################################
 	# Wireless Networking
