igb: Copyright string update to year 2013 (fate#317388, bsc#909491).

--- a/series.conf
+++ b/series.conf
@@ -14379,6 +14379,7 @@
 	patches.drivers/0013-igb-Free-any-held-skb-that-should-have-been-timestam.patch
 	patches.drivers/0014-igb-Use-in-kernel-PTP_EV_PORT-define.patch
 	patches.drivers/0015-igb-Replace-rmb-in-Tx-cleanup-with-read_barrier_depe.patch
+	patches.drivers/0016-igb-Copyright-string-update-to-year-2013.patch
 
 	########################################################
 	# Wireless Networking
