intel: Remove extern from function prototypes (fate#317388, bsc#909491).

--- a/series.conf
+++ b/series.conf
@@ -14448,6 +14448,7 @@
 	patches.drivers/0082-igb-Add-additional-get_phy_id-call-for-i354-devices.patch
 	patches.drivers/0083-igb-Read-flow-control-for-i350-from-correct-EEPROM-s.patch
 	patches.drivers/0084-DMA-API-net-intel-igb-fix-32-bit-DMA-mask-handling.patch
+	patches.drivers/0085-intel-Remove-extern-from-function-prototypes.patch
 
 	########################################################
 	# Wireless Networking
