igb: Free any held skb that should have been timestamped on remove (fate#317388, bsc#909491).

--- a/series.conf
+++ b/series.conf
@@ -14376,6 +14376,7 @@
 	patches.drivers/0010-igb-Add-support-for-SW-timestamping.patch
 	patches.drivers/0011-igb-Add-timeout-for-PTP-Tx-work-item.patch
 	patches.drivers/0012-igb-Add-mechanism-for-detecting-latched-hardware-Rx-.patch
+	patches.drivers/0013-igb-Free-any-held-skb-that-should-have-been-timestam.patch
 
 	########################################################
 	# Wireless Networking
