igb: Add support functions to access thermal data (fate#317388, bsc#909491).

--- a/series.conf
+++ b/series.conf
@@ -14371,6 +14371,7 @@
 	patches.drivers/0005-net_tstamp-Add-SIOCGHWTSTAMP-ioctl-to-match-SIOCSHWT.patch
 	patches.drivers/0006-remove-init-of-dev-perm_addr-in-drivers.patch
 	patches.drivers/0007-igb-Add-i2c-interface-to-igb.patch
+	patches.drivers/0008-igb-Add-support-functions-to-access-thermal-data.patch
 
 	########################################################
 	# Wireless Networking
