--- a/series.conf
+++ b/series.conf
@@ -14509,6 +14509,7 @@
 	patches.drivers/0143-igb-ixgbe-remove-return-statements-for-void-function.patch
 	patches.drivers/0144-i40e-igb-ixgbe-remove-usless-return-statements.patch
 	patches.drivers/0145-igb-remove-redundant-PHY-power-down-register-write.patch
+	patches.drivers/0146-igb-rename-igb_ptp_enable-to-igb_ptp_feature_enable.patch
 
 	########################################################
 	# Wireless Networking
