igb: Fixed Wake On LAN support (fate#317388, bsc#909491).

--- a/series.conf
+++ b/series.conf
@@ -14457,6 +14457,7 @@
 	patches.drivers/0091-igb-Don-t-let-ethtool-try-to-write-to-iNVM-in-i210-i.patch
 	patches.drivers/0092-net-Explicitly-initialize-u64_stats_sync-structures-.patch
 	patches.drivers/0093-igb-Update-link-modes-display-in-ethtool.patch
+	patches.drivers/0094-igb-Fixed-Wake-On-LAN-support.patch
 
 	########################################################
 	# Wireless Networking
