--- a/series.conf
+++ b/series.conf
@@ -14373,6 +14373,7 @@
 	patches.drivers/0007-igb-Add-i2c-interface-to-igb.patch
 	patches.drivers/0008-igb-Add-support-functions-to-access-thermal-data.patch
 	patches.drivers/0009-igb-Enable-hwmon-data-output-for-thermal-sensors-via.patch
+	patches.drivers/0010-igb-Add-support-for-SW-timestamping.patch
 
 	########################################################
 	# Wireless Networking
