igb: Update igb to use a path similar to ixgbe to determine when to stop Tx (fate#317388, bsc#909491).

--- a/series.conf
+++ b/series.conf
@@ -14386,6 +14386,7 @@
 	patches.drivers/0020-igb-Fix-for-improper-exit-in-igb_get_i2c_client.patch
 	patches.drivers/0021-igb-Fix-for-improper-allocation-flag-in-igb_get_i2c_.patch
 	patches.drivers/0022-igb-Refix-sparse-warning-in-igb_get_i2c_client.patch
+	patches.drivers/0023-igb-Update-igb-to-use-a-path-similar-to-ixgbe-to-det.patch
 
 	########################################################
 	# Wireless Networking
