igb: remove blocking phy read from inside spinlock (fate#317388, bsc#909491).

--- a/series.conf
+++ b/series.conf
@@ -14522,6 +14522,7 @@
 	patches.drivers/0156-igb-remove-unnecessary-break-after-return.patch
 	patches.drivers/0157-igb-Add-message-when-malformed-packets-detected-by-h.patch
 	patches.drivers/0158-igb-bump-igb-version-to-5.2.13.patch
+	patches.drivers/0159-igb-remove-blocking-phy-read-from-inside-spinlock.patch
 
 	########################################################
 	# Wireless Networking
