net: igb calls skb_set_hash (fate#317388, bsc#909491).

--- a/series.conf
+++ b/series.conf
@@ -14470,6 +14470,7 @@
 	patches.drivers/0104-igb-Update-license-text-to-remove-FSF-address-and-up.patch
 	patches.drivers/0105-igb-fix-array-size-calculation.patch
 	patches.drivers/0106-igb-fix-warning-if-CONFIG_IGB_HWMON.patch
+	patches.drivers/0107-net-igb-calls-skb_set_hash.patch
 
 	########################################################
 	# Wireless Networking
