--- a/series.conf
+++ b/series.conf
@@ -14452,6 +14452,7 @@
 	patches.drivers/0086-igb-Fix-ethtool-loopback-test-for-82580-copper.patch
 	patches.drivers/0087-igb-Add-ethtool-offline-tests-for-i354.patch
 	patches.drivers/0088-igb-Add-ethtool-support-to-configure-number-of-chann.patch
+	patches.drivers/0089-net-drivers-net-Miscellaneous-conversions-to-ETH_ALE.patch
 
 	########################################################
 	# Wireless Networking
